# pi-day-2025-with-py

./: .containerignore  .gitignore  Containerfile  README.md  TODO.md  compose.yml  conftest.py  justfile  lets.yaml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  vsc-build-ui.sh  vsc-install-pnpm.sh  vsc-install-wasmtime-tools.sh  vsc-install-zig.sh  vsc-run-pytests.sh  vsc-run-wasm-tests.sh  vsc-run-zig-tests.sh  vsc-utils.sh
.github/workflows/: tests.yml
docs/: gosper_1000000.ods
etc/: build_run_zig_tests.sh  clean_final.sh  gen_run_pytests.sh  vsc-build-ui.sh  vsc-install-pdm.sh  vsc-install-pnpm.sh  vsc-install-zig.sh  vsc-run-pytests.sh  vsc-run-zig-tests.sh
jupyter/: latex_utils.py  pi_1000000.py  sinha_saha.ipynb
pi_py/: __init__.py  conftest.py  pi_1000000.py  pi_digits.py  pi_digits_bbp.py  pi_digits_sinha_saha.py  profile_pi.py.txt  test_adapter.py  test_histograms.py  test_pi_digits.py  test_pi_digits_gen.py  test_utils.py  test_writer.py  utils.py  writer.py
pi_py/algo/: bbp.py  bellard.py  decorator.py  from_file.py  generators.py  gosper.py  madhava.py  mpmath_executor.py  pi_digits_bbp.py  pi_digits_bellard.py  pi_digits_gosper.py  pi_digits_madhava.py  pi_digits_sinha_saha.py  sinha_saha.py  test_pi_digits_gen.py
pi_ui/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
pi_ui/src/: App.tsx  AppDescription.tsx  algodetails.tsx  components.tsx
pi_ui/src/pi/: package.json  pi-canvas.tsx  pi-digits.loader.js  pi-digits.model.ts  pi.context.tsx  pi.palette.ts  py-versions.tsx  utils.js
pi_wasm/: asconfig.json  build.zig  build.zig.zon  package.json  pi-wasm-tester.mjs
pi_wasm/assembly/: colors.ts  index.ts  utils.mjs
pi_wasm/assembly/pi-digits/: pi_baseline.ts  pi_bbp.ts  pi_bellard.ts  pi_gosper.ts  pi_sinha_saha.ts  pi_tachus.ts  pi_ten_digits.ts
pi_wasm/src/: lib.zig  main.zig  pi_digits.zig  pi_saha_sinha.zig  root.zig  wasi_imports.zig  wasm_imports.zig  wasm_runtime.zig  zig_runtime.zig
pi_wasm/src/pi_digits/: colors.zig  histo.zig  pi-digits-orig.cjs  pi-digits.cjs  pi_1000000.zig  pi_bbp.zig  pi_bellard.zig  pi_gosper.zig  pi_random.zig  pi_saha_sinha.zig  pi_sinha_saha.zig  pi_ten_digits.zig  tpi_1000000.zig
pi_wasm/tests/: index.js
