[project]
name = "pi_py"
version = "0.1.0"
description = "Python project for pi-day-2025-with-py"
authors = [
    {name = "Kevin McWhirter", email = "klmcw@yahoo.com"},
]
dependencies = [
    "sympy>=1.13.3",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "tox>=4.18.0",
]

[dependency-groups]
jupyter = [
    "gmpy2>=2.2.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "mpmath[gmpy2]>=1.3.0",
    "nbformat>=5.10.4",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
]

[tool.autopep8]
max-doc-length = 140
max_line_length = 140

[tool.pytest.ini_options]
addopts = ""

[tool.mypy]
mypy_path = "pi_py/"
check_untyped_defs = true
disallow_any_generics = false # until Generics union types are supported
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.setuptools]
# for tox discovery
packages = ["pi_py"]
