[project]
name = "pi_py"
version = "0.1.0"
description = "Python project for pi-day-2025-with-py"
authors = [
    {name = "Kevin McWhirter", email = "klmcw@yahoo.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "gmpy2>=2.2.1",
    "mpmath[gmpy2]>=1.3.0",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "tox>=4.18.0",
]

jupyter = [
    "gmpy2>=2.2.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "mpmath[gmpy2]>=1.3.0",
    "nbformat>=5.10.4",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
]

[tool.pdm.scripts]
create.shell = "pdm sync --group dev"
clean.shell = "find . -type d -name __pycache__ -exec rm -fr {} \\;;for d in ${TO_DEL};do echo $d;rm -fr $d;done"
clean.env = { TO_DEL = "build .coverage coverage.xml log .mypy_cache .pdm-build pi_py.egg-info pi_ui/dist pi_ui/.env pi_ui/node_modules pi_ui/src/pi-wasm pi_wasm/build pi_wasm/node_modules __pycache__ .pytest_cache .tox" }
clean.help = "Clean build artifacts"
envclean.shell = "for d in ${TO_DEL};do echo $d;rm -fr $d;done"
envclean.env = { TO_DEL = ".venv" }
envclean.help = "Clean environment"
allclean.composite = [ "clean", "envclean" ]
allclean.help = "Clean build artifacts and environment"

_pybuild.shell = "ENABLE_TESTS=0 .devcontainer/vsc-run-pytests.sh"
_wasmbuild.shell = "ENABLE_TESTS=0 .devcontainer/vsc-run-wasm-tests.sh"
_uibuild.shell = ".devcontainer/vsc-build-ui.sh"
_uistart.shell = "cd pi_ui && pnpm start"

gen.cmd = "python -m pi_py.pi_digits"
gen.help = "generate digits of pi"

ui.composite = [ "clean", "_pybuild", "_wasmbuild", "_uibuild", "_uistart" ]
ui.help = "Build wasm & ui; then start ui"


flake8 = "flake8 pi_py/"
mypy = "mypy pi_py/"

_pytest.shell = "ENABLE_TESTS=1 .devcontainer/vsc-run-pytests.sh"
_wasmtest.shell = "ENABLE_TESTS=1 .devcontainer/vsc-run-wasm-tests.sh"
test.composite = [ "_pytest", "_wasmtest" ]

testcov.cmd = "pytest --cov=pi_py --cov-report xml:coverage.xml --cov-report term"
testcov.help = "Produce test coverage xml and term reports"


[tool.autopep8]
max-doc-length = 140
max_line_length = 140

[tool.pytest.ini_options]
addopts = ""

[tool.mypy]
mypy_path = "pi_py/"
check_untyped_defs = true
disallow_any_generics = false # until Generics union types are supported
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.setuptools]
# for tox discovery
packages = ["pi_py"]
